--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,17 +5,23 @@
     <ion-grid>
       <ion-row>
         <ion-col size="4">
-          <img src="../../assets/images/all.png" />
+          <a routerLink="/all">
+            <img src="../../assets/images/all.png" />
+          </a>
           <h4>All</h4>
         </ion-col>
 
         <ion-col size="4">
-          <img src="../../assets/images/fastfood.png" />
+          <a routerLink="/fastfood">
+            <img src="../../assets/images/fastfood.png" />
+          </a>
           <h4>Fast Food</h4>
         </ion-col>
 
         <ion-col size="4">
-          <img src="../../assets/images/seafood.png" />
+          <a routerLink="/seafood">
+            <img src="../../assets/images/seafood.png" />
+          </a>
           <h4>Seafood</h4>
         </ion-col>
       </ion-row>
@@ -25,9 +31,9 @@
   <div>
     <h2>Popular</h2>
 
-    <ion-grid fixed>
-      <ion-row class="ion-align-items-start">
-        <ion-col *ngFor="let food of popular" size="6">
+    <ion-grid>
+      <ion-row class="ion-justify-content-center">
+        <ion-col *ngFor="let food of popular" size="5.5">
           <img src={{food.image}} />
           <h2>{{food.name}}</h2>
           <h3><sup>$</sup>{{food.price}}</h3>
