--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,11 @@
+h1.ion-padding, h2.ion-padding {
+  font-weight: bold;
+  font-size: 2rem;
+}
 
+h2 {
+  color: #ccc;
+}
 
 ion-row {
   text-align: center;
@@ -11,14 +18,19 @@ ion-row {
     background-color: #7226dd;
   }
 
-  ion-col[size="5.5"] {
-    margin: 5px;
+  ion-col.ion-margin {
+    margin: 4px;
     border-radius: 30px;
     background-color: #efefef;
   }
 
+  a {
+    text-decoration: none;
+  }
+
   h2, h3 {
     font-weight: bold;
+    color: black
   }
 
   h3 {
