--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -17,9 +17,11 @@
   <ion-grid fixed>
     <ion-row>
       <ion-col *ngFor="let food of menu" size="5.5">
-        <img src={{food.image}} />
-        <h2>{{food.name}}</h2>
-        <h3><sup>$</sup>{{food.price}}</h3>
+        <a routerLink="/detail/{{food.id}}">
+          <img src={{food.image}} />
+          <h2>{{food.name}}</h2>
+          <h3><sup>$</sup>{{food.price}}</h3>
+        </a>
       </ion-col>
     </ion-row>
   </ion-grid>
