--- a/src/app/pages/category/category.page.scss
+++ b/src/app/pages/category/category.page.scss
@@ -6,6 +6,15 @@ ion-row {
     background-color: #efefef;
   }
 
+  a {
+    text-decoration: none;
+    color: black;
+
+    img {
+      max-width: 8rem;
+    }
+  }
+
   h2, h3 {
     font-weight: bold;
   }
